--- a/src/components/StartPage.css
+++ b/src/components/StartPage.css
@@ -44,16 +44,12 @@
 }
 
 .start-screen h1 {
-    animation: fontCycle 2s ease-in-out infinite;
+    animation: fontCycle 2s infinite;
     font-size: 8rem;
     font-weight: bold;
-    line-height:80%;
+    line-height: 80%;
 }
 
-button {
-    padding: 1 1.5 1 1.5rem;
-}
-
-p { 
+p {
     font-family: Redaction;
 }
