--- a/src/index.css
+++ b/src/index.css
@@ -183,9 +183,8 @@ ul {
 :root {
   font-family: 'Redaction', system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-size: 18px;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --color-primary: rgb(28, 25, 237);
+  --bg: #F7F6FF;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -208,35 +207,40 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--bg);
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: var(--color-primary);
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  all: unset;
+  border: 2px solid var(--color-primary);
+  background: none;
+  margin: 2em;
+  padding: 0.5em 1em;
+  font: inherit;
   cursor: pointer;
-  transition: border-color 0.25s;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  transition: box-shadow 0.1s, transform 0.1s;
+  box-shadow: 5px 5px 0px rgba(28, 25, 237);
 }
 
-button:hover {
-  border-color: #646cff;
+button:active {
+  transform: translate(5px, 5px);
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.7);
 }
 
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+button:hover {}
 
-@media (prefers-color-scheme: light) {
+
+
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -249,4 +253,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
