--- a/src/index.css
+++ b/src/index.css
@@ -173,10 +173,10 @@ h2,
 h3,
 li,
 p,
-ul {
+ul,
+* {
   margin: 0;
   padding: 0;
-  font-weight: 400;
   -webkit-font-smoothing: antialiased
 }
 
@@ -191,22 +191,10 @@ ul {
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
   background-color: var(--bg);
 }
 
