--- a/src/components/QuizPage.css
+++ b/src/components/QuizPage.css
@@ -1,54 +1,63 @@
-.quiz-container {
-  overflow: hidden;
+.quiz-page {
+  width: 90vw;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-}
-
-.quiz-header {
+  align-items: center;
+  justify-content: flex-start;
   text-align: center;
+  padding: 1rem;
+  gap: 1rem;
+  overflow: hidden;
 }
 
-.quiz-header h1 {
-  font-size: 3.6rem;
-  margin-bottom: 1rem;
-  font-family: Redaction;
-  font-weight: 400;
-  letter-spacing: -0.16rem;
+.quiz-status {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
 }
 
-.quiz-header .score {
-  font-size: 1.5rem;
-  margin-bottom: 0.5rem;
-  font-family: inherit;
+.celeb-container {
+  overflow: hidden;
 }
+
 
 .quiz-split {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: flex-start;
   gap: 4rem;
-  height: 80%;
-  overflow: hidden;
+  padding: 1.2rem;
 }
 
 .person-section {
-  width: 20rem;
-  height: 20rem;
   cursor: pointer;
-  position: relative;
-  overflow: hidden;
-  transition: transform 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
-.person-section:hover {
-  transform: scale(1.02);
+.person-section:hover .person-image-container {
+  transform: translate(-0.3rem, -0.3rem) scale(1.02);
+  box-shadow: 0.8rem 0.8rem 0 rgba(28, 25, 237);
+}
+
+
+.person-section:active .person-image-container {
+  transform: translate(1.2rem, 1.2rem) scale(0.98);
+  box-shadow: 0 0 0 rgba(28, 25, 237, 0);
 }
 
 .person-image-container {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 32rem;
+  height: 28rem;
   overflow: hidden;
+  border: 2px solid var(--color-primary);
+  will-change: transform, box-shadow;
+  transition: transform 400ms cubic-bezier(.34, 1.56, .64, 1), box-shadow 400ms cubic-bezier(.34, 1.56, .64, 1);
 }
 
 .person-image {
@@ -58,29 +67,30 @@
   transition: filter 0.3s ease;
 }
 
-.person-section:hover .person-image {
-  filter: brightness(0.7);
-}
-
 .person-name-overlay {
   color: var(--bg);
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
-  background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
+  background: linear-gradient(transparent, rgba(0, 0, 0, 1));
   padding: 2rem 1rem 1rem;
   transform: translateY(100%);
   transition: transform 0.3s ease;
+}
+
+.person-name-overlay p {
+  font-size: 1.2rem;
 }
 
 .person-section:hover .person-name-overlay {
   transform: translateY(0);
 }
 
-.person-name {
-  font-size: 2rem;
-  font-family: 'Redaction', sans-serif;
-  display: block;
+.person-name-static {
+  font-family: 'Redaction 35', sans-serif;
+  font-weight: 500;
+  font-size: 1.6rem;
   text-align: center;
+  padding: 0.5rem 0.75rem;
 }
