--- a/src/index.css
+++ b/src/index.css
@@ -192,23 +192,41 @@ ul,
 }
 
 body {
+  margin: 0;
+  padding: 0;
   display: flex;
-  place-items: center;
   height: 100vh;
   background-color: var(--bg);
+  overflow: hidden;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3.6rem;
   line-height: 1.1;
   color: var(--color-primary);
 }
+
+h2 {
+  font-size: 3.2rem;
+  font-weight: 500;
+  font-family: 'Redaction 50', sans-serif;
+  color: var(--color-primary);
+}
+
+h3 {
+  font-size: 2.4rem;
+  margin-bottom: 1rem;
+  font-weight: 400;
+  font-family: 'Redaction 35', sans-serif;
+}
+
+
 
 button {
   all: unset;
   border: 2px solid var(--color-primary);
   background: none;
-  margin: 2em;
+  margin: 1.2rem;
   padding: 0.5em 1em;
   font: inherit;
   cursor: pointer;
@@ -221,10 +239,13 @@ button {
 
 button:active {
   transform: translate(5px, 5px);
-  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 0 rgba(28, 25, 237);
 }
 
-button:hover {}
+button:hover:not(:active) {
+  border: 2px solid rgba(0, 0, 0);
+  box-shadow: 5px 5px 0 rgba(0, 0, 0);
+}
 
 
 
