--- a/src/components/ScorePopup.css
+++ b/src/components/ScorePopup.css
@@ -2,6 +2,15 @@
   visibility: hidden;
 }
 
+.popup-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: clamp(0.4rem, 2vw, 1rem);
+}
+
 .popup-content button {
   padding: 1rem 4rem;
+  margin: clamp(0.4rem, 2vw, 1rem);
 }
