--- a/src/index.css
+++ b/src/index.css
@@ -215,18 +215,21 @@ h2 {
 
 h3 {
   font-size: 2.4rem;
-  margin-bottom: 1rem;
   font-weight: 400;
   font-family: 'Redaction 35', sans-serif;
 }
 
+h4 {
+  font-size: 1.6rem;
+  margin-bottom: 1rem;
+  font-weight: 400;
+}
 
 
 button {
   all: unset;
   border: 2px solid var(--color-primary);
   background: none;
-  margin: 1.2rem;
   padding: 0.5em 1em;
   font: inherit;
   cursor: pointer;
