--- a/src/components/StartPage.css
+++ b/src/components/StartPage.css
@@ -40,7 +40,6 @@
     justify-content: center;
     text-align: center;
     padding: 2rem;
-    border-radius: 10px;
     gap: 1rem;
 }
 
@@ -51,13 +50,15 @@
 }
 
 .start-screen h4 {
- 
+    padding: 0;
+    margin: 0;
 }
 
 .start-screen button {
     font-family: "Redaction 50";
     font-size: 1.5rem;
     font-weight: 400;
+    margin: clamp(0.6rem, 0.8rem, 1rem)
 }
 
 p {
@@ -77,6 +78,7 @@ p {
 
 .disclaimer {
     position: absolute;
-    bottom: 100px;
-    width: 40%;
+    bottom: clamp(0.4rem, 0.8rem, 1.2rem);
+    width: 50%;
+    font-size: clamp(0.8rem, 1rem, 1.2rem);
 }
